[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/objects/Trap.gd" type="Script" id=1]
[ext_resource path="res://resources/sprites/oil.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 63.5685

[node name="Trap" type="Sprite"]
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
scale = Vector2( 1.48114, 1.10098 )
shape = SubResource( 1 )

[node name="DamageTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_Hitbox_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
